syntax = "proto3";

package currency;

option java_multiple_files = true;
option java_package = "com.example.wallet.grpc";
option java_outer_classname = "ConversionProto";

option go_package = "/proto;currency";

service CurrencyConversion {
  rpc Convert (ConvertRequest) returns (ConvertResponse);
}

message ConvertRequest {
  string senderCurrencyType = 1;
  string receiverCurrencyType = 2;
  double amount = 3;
}

message ConvertResponse {
  double convertedAmount = 1;
}